Fix the spinner display on config form list items.
The spinner was set to have a background-position-y of 6px, which was a
relic from something in the past. This ends up looking pretty bad with
the current images we're using, since the spinner gets cut off,
so remove it.

--- a/djblets/static/djblets/css/config-forms.less
+++ b/djblets/static/djblets/css/config-forms.less
@@ -404,7 +404,6 @@
       display: inline-block;
       margin: 1px;
       background-image: url("@{img-base}/spinner.gif");
-      background-position-y: 6px;
       background-repeat: no-repeat;
       vertical-align: middle;
       visibility: hidden;
